# aps-ai-tracker

./: .gitignore  CITATION.cff  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  agencies.toml  atproto-state.json  atproto-syndication.json  cron-scrape.sh  mise.toml  pyproject.toml  test_export.py  test_scraper.py
.cache/: embeddings.json
.claude/skills/scrape/: SKILL.md
.github/workflows/: deploy.yml
backlog/: config.yml
backlog/tasks/: task-7 - Mint-a-Zenodo-DOI-via-the-GitHub-release-pathway.md
lexicons/me/benswift/: transparencyStatement.json  transparencyStatementRevision.json
ops/systemd/: aps-scrape.service  aps-scrape.timer
site/: astro.config.ts  package.json  pnpm-lock.yaml  stylelint.config.mjs
site/public/: CNAME  robots.txt
site/public/.well-known/: site.standard.publication
site/scripts/: atproto-profile.ts  atproto-publish.ts  publish-lexicon.ts
site/src/components/: AgencyWall.astro  ChangeFeedItem.astro  CoverageStats.astro  DiffView.astro  Footer.astro  Layout.astro  Nav.astro  NeighbourList.astro  PassageText.astro  (+6 more)
src/aps_ai_tracker/: __main__.py  scraper.py  status.py
src/aps_ai_transparency_tracker/: export.py  pdf_cleanup.py  process.py  scraper.py
statements/: ABS.md  ACCC.md  ACIAR.md  ACMA.md  ACQSC.md  ACSQHC.md  ADHA.md  AEC.md  AFMA.md  AFSA.md  AGD.md  AIATSIS.md  AIC.md  AIFS.md  AIHW.md  ALRC.md  ANAO.md  ANMM.md  AOFM.md  APRA.md  APSC.md  ARC.md  ARPANSA.md  ARPC.md  ART.md  ASIC.md  ASQA.md  ASSEA.md  ATO.md  ATSB.md  AUSTRAC.md  AUSTRADE.md  CA.md  CCA.md  CDPP.md  CER.md  CGC.md  COMCARE.md  DAFF.md  DCCEEW.md  (+55 more)
(+29 files in other folders)
