[project]
name = "aps-ai-transparency-tracker"
version = "0.1.0"
description = "Scrape and track Australian Government AI transparency statements over time"
authors = [
    { name = "Ben Swift", email = "ben@benswift.me" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "mdformat>=1.0.0",
    "pypdf>=5.1.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
scrape = "aps_ai_transparency_tracker.__main__:main"
process = "aps_ai_transparency_tracker.process:main"
status = "aps_ai_transparency_tracker.status:main"
export = "aps_ai_transparency_tracker.export:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.14.4",
]
# Heavier deps only the `export` command needs; kept out of the default install
# so the scraper stays lean. Run with `uv run --group export export`.
export = [
    "numpy>=2.0",
    "openai>=1.0",
]

[tool.pytest.ini_options]
addopts = "-n auto -m 'not might_fail'"
markers = [
    "might_fail: marks tests that may fail due to missing URLs or external issues (deselected by default)",
]
